# blender-mcp

./: pyproject.toml
