[project]
name = "blender-mcp"
version = "1.5.5"
description = "Blender integration through the Model Context Protocol"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp[cli]>=1.3.0",
    "supabase>=2.0.0",
    "tomli>=2.0.0",
]

[project.scripts]
blender-mcp = "blender_mcp.server:main"

[build-system]
requires = ["setuptools>=78.1.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[project.urls]
"Homepage" = "https://github.com/mbasala/blender-mcp"
"Bug Tracker" = "https://github.com/mbasala/blender-mcp/issues"
